# job-application-assistant

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  render.yaml
agents/: orchestrator.py  state.py
agents/nodes/: matcher.py  supervisor.py  tailor.py  tracker.py
backend/: database.py  main.py  schemas.py
backend/models/: models.py
backend/routers/: agent.py  applications.py  jobs.py  resumes.py
db/: schema.sql
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/applications/: route.ts
frontend/src/app/api/applications/[id]/: route.ts
frontend/src/app/api/jobs/: route.ts
frontend/src/app/api/jobs/[id]/: route.ts
frontend/src/app/api/jobs/search/: route.ts
frontend/src/app/api/resumes/: route.ts
frontend/src/app/applications/: page.tsx
frontend/src/app/applications/[id]/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/resumes/: page.tsx
frontend/src/components/: job-card.tsx  kanban-board.tsx
frontend/src/lib/: api.ts
mcp-server/tools/: database.py
mcp_server/: server.py
mcp_server/tools/: job_boards.py  resume_parser.py
